# forensiq

./: LICENSE  README.md
.github/workflows/: publish.yml
aiagent/: .env.example  .gitignore  .pypirc  CLI_USER_GUIDE.md  DYNAMIC_MONITORING_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  MONGODB_RETRIEVAL_GUIDE.md  PYPI_UPLOAD_GUIDE.md  README.md  RELEASE_CHECKLIST.md  __init__.py  ai_agent.py  cli_requirements.txt  cli_tool.py  command.txt  mongodb_retrieval_demo.py  mongodb_service.py  monitoring_demo.py  setup.py  setup_env.bat  setup_pypi_config.bat  test_cli.py  test_complete_functionality.py  test_mongodb.py  test_package_installation.bat  test_package_installation.sh  upload_pypi.bat  upload_testpypi.bat
aiagent/demo_exports/: sample_analysis.csv  (+1 more)
client/: package-lock.json  package.json  tailwind.config.ts
scripts/: check_mitre_endpoints.py
server/: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  config.py  db.py  enterprise_attack.json  main.py  pyproject.toml  render.yaml  requirements.txt  reset_chromadb.py  start.sh  test_aws_bedrock.py  test_rag.py
server/chroma_db/: chroma.sqlite3
server/core/: __init__.py  config.py  orchestrator.py
server/model/: __init__.py  analysis_model.py  analysis_storage.py  logs_model.py  users.py
server/routers/: __init__.py  analysis.py  analyzis.py  auth.py  mitre.py  monitoring.py  users.py
server/services/: __init__.py  aiclient.py  analysis_storage_service.py  aws_bedrock_service.py  bedrock_service.py  chromadb_service.py  data_prepping.py  encryption_service.py  gemini_service.py  ioc_extractor.py
(+33 files in other folders)
